# msim

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: setup.demo.01.cfg
notebooks/: Flight-Profile.ipynb
scripts/: create-venv.sh  run-trackgen-demo.sh  run-trackgen-generate.sh
src/tmns/app/trackgen/: Options.py  main.py  sim.py  writer.py
src/tmns/geo/: coordinate.py
src/tmns/math/: physics.py
src/tmns/sim/: missile.py  motion.py
test/geo/: test_coordinate.py
tmns/app/trackgen/: main.py
tmns/math/: rotations.py
